# IGF

./: .gitmodules  CMakeLists.txt  IGF.sln  README.md
IGFCore/: CMakeLists.txt
IGFCore/src/: IGFCore.cpp  IGFCore.h
include/: IGF.hpp
src/: CMakeLists.txt  IGF.cpp
